# lab_orgbench

./: RESEARCH_OVERVIEW.md  pilot_experiment_design.md  research_gaps_critical_analysis.md
Phase0/: detailed_design.md  paper_draft_v0.1.md  paper_draft_v0.1_JN.md  research_gaps_and_issues.md  research_plan_B_to_A.md  survey_multi_agent_systems.md  survey_organizational_theory.md  アイデア_ai_org_competition_research_plan.md
Phase1/: README.md  critical_review_and_response.md  detailed_plan.md  open_issues.md  (+3 more)
orgbench/: .gitignore  pyproject.toml  smoke_test.py
orgbench/configs/: experiment.yaml  experiment_main.yaml  experiment_smoke.yaml
orgbench/configs/judge/: rubric.md
orgbench/configs/prompts/: cdo.md  ceo.md  cfo.md  researcher.md  single_agent.md  tl.md  writer.md
orgbench/configs/templates/: anchor.yaml  deep_finance.yaml  deep_mesh.yaml  deep_noreview.yaml  deep_passthrough.yaml  deep_tech.yaml  flat_hub.yaml  flat_mesh.yaml  homo_gpt.yaml  homo_haiku.yaml  matrix_hub.yaml  single_agent.yaml
orgbench/configs/themes/: t01_ai_accounting.yaml  t02_legal_review.yaml  t03_gov_chatbot.yaml  t04_elderly_fitness.yaml  t05_insurance_ai.yaml
orgbench/paper/: generate_figures.py  main.tex
orgbench/reports/: pilot_experiment_report.md
orgbench/src/orgbench/: __main__.py  config_loader.py  judge.py  models.py  orchestrator.py  runner.py  tools.py
orgbench/tests/: conftest.py  test_agents.py  test_analysis.py  test_config_loader.py  test_integration.py  test_judge.py  test_llm.py  test_models.py  test_orchestrator.py  test_runner.py  test_tools.py
(+963 files in other folders)
